--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
           <h1>РЖД- это компания которая владеет поездами<h1>
           <h2>Вот несколько вариантов скоросных поездов:</h2>
          
-            <p>Сапсан</p>
-            <p>Ласточка</p>
-            <p>Невский экспресс</p>
+            <p>1.Сапсан</p>
+            <p>2.Ласточка</p>
+            <p>3.Невский экспресс</p>
         
           <div>
           <a href="https://www.rzd.ru/ru/9318">Скоросные поезда</a>
